--- a/styles/home.css
+++ b/styles/home.css
@@ -5,6 +5,7 @@ body {
 h1 {
     text-align: center;
     font-size: xx-large;
+    color: #00687bfd;
     background-color: #ecf0f1;
 }
 
@@ -52,7 +53,7 @@ input[type="text"] {
     top: 48vh;
     left: 20%;
     width: 60vw;
-    max-height: 50vh;
+    max-height: 40vh;
     overflow-y: scroll;
     border-radius: 20px;
 }
@@ -100,4 +101,10 @@ button{
     width: 150px;
     border-radius: 10px;
     background-color :azure;
+}
+
+#favlink{
+    position: relative;
+    top: 80vh;
+    left: 45%;
 }
