--- a/styles/home.css
+++ b/styles/home.css
@@ -1,6 +1,14 @@
-body {
-    background-color: #fffdfdfd;
-}
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../media/food1.jpg');
+    filter: blur(10px);
+  }
+
 
 h1 {
     text-align: center;
@@ -79,13 +87,14 @@ input[type="text"] {
 }
 
 table {
-    margin: 0 auto;  /* Center table horizontally */
+    margin: 0 auto;
+    /* Center table horizontally */
     background-color: #fffdfdfd;
     bottom: 1px;
     border-radius: 20px;
 }
 
-tr{
+tr {
     background-color: #fffdfdfd;
 }
 
@@ -93,17 +102,17 @@ td {
     background-color: #fffdfdfd;
 }
 
-td:hover{
-    background-color :#a8bbbf;
+td:hover {
+    background-color: #a8bbbf;
 }
 
-button{
+button {
     width: 150px;
     border-radius: 10px;
-    background-color :azure;
+    background-color: azure;
 }
 
-#favlink{
+#favlink {
     position: relative;
     top: 80vh;
     left: 45%;
