--- a/styles/home.css
+++ b/styles/home.css
@@ -1,13 +1,20 @@
-body::before {
+/* body::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../media/food1.jpg');
-    filter: blur(10px);
-  }
+    background-image: url('../media/food4.jpg');
+    filter: blur(5px);
+    z-index: -1;
+} */
+
+
+body {
+  background: conic-gradient(from 135deg, #9DA7E0, #CCD8FF);
+  height: 96vh;
+}
 
 
 h1 {
@@ -19,27 +26,23 @@ h1 {
 
 .box {
     background-color: #ecf0f1;
-    height: 40vh;
+    max-height: calc(40vh + 30vh);
     width: 60vw;
-    position: absolute;
-    top: 15vh;
-    left: 20%;
+    margin-top: 15vh;
+    margin-left: 20%;
     border-radius: 20px;
 }
 
 #searchTitle {
-    position: absolute;
     font-size: 3vw;
-    top: 0vh;
-    left: 30%;
+    padding-top: 1vh;
+    margin-left: 30%;
 }
 
 #searchInput {
-    position: absolute;
     width: 35vw;
     height: 40px;
-    top: 25vh;
-    left: 20%;
+    margin-left: 20%;
     border: 5px;
     border-radius: 20px;
 }
@@ -49,19 +52,17 @@ input[type="text"] {
 }
 
 #searchIcon {
-    position: absolute;
-    top: 26vh;
     height: 20px;
-    left: 45vw;
+    position: absolute;
+    top: 50vh;
+    left: 65vw;
 }
 
 #resultItems {
     background-color: #ecf0f1;
-    position: absolute;
-    top: 48vh;
-    left: 20%;
     width: 60vw;
-    max-height: 40vh;
+    margin-top: 20px;
+    max-height: 30vh;
     overflow-y: scroll;
     border-radius: 20px;
 }
@@ -113,7 +114,7 @@ button {
 }
 
 #favlink {
-    position: relative;
-    top: 80vh;
-    left: 45%;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    margin-left: 40%;
 }
