--- a/styles/home.css
+++ b/styles/home.css
@@ -1,57 +1,62 @@
 body {
-  background: conic-gradient(from 135deg, #9DA7E0, #CCD8FF);
-  height: 96vh;
+    background: conic-gradient(from 135deg, #9DA7E0, #CCD8FF);
+    height: 96vh;
 }
 
 h1 {
     text-align: center;
-    font-size: xx-large;
-    color:  #f4f4f4;
-    margin-left: 40%;
-    width: 20vw;
+    font-size: 4vmin;
+    color: #f4f4f4;
+    margin: 0 auto;
+    width: 20vmax;
+    min-width: 25vmin;
     height: 5vh;
     border-radius: 10px;
-    background-color:  rgba(4, 4, 87, 0.5);
+    background-color: rgba(4, 4, 87, 0.5);
 }
 
 .box {
-    background-color:  rgba(4, 4, 87, 0.5);
+    background-color: rgba(4, 4, 87, 0.5);
     max-height: calc(40vh + 30vh);
     width: 60vw;
     margin-top: 15vh;
-    margin-left: 20%;
+    margin: 5% auto;
     border-radius: 20px;
 }
 
-#searchTitle {
+h2{
+    text-align: center;
     color: #f4f4f4;
-    font-size: 3vw;
+    font-size: 6vmin;
     padding-top: 1vh;
-    margin-left: 30%;
+    /* margin-left: 30%; */
 }
 
 #searchInput {
     width: 35vw;
     height: 40px;
-    margin-left: 20%;
+    margin: 0px 20%;
     border: 5px;
     border-radius: 20px;
 }
 
 input[type="text"] {
     text-align: center;
+    background: url('../media/search.svg') no-repeat right;
+    background-size :25px;
+    background-color: #f4f4f4;
 }
 
-#searchIcon {
+/* #searchIcon {
     height: 20px;
-    position: absolute;
-    top: 50vh;
-    left: 65vw;
-}
+    position: relative;
+    top: 4vmin;
+    left: 45vw;
+} */
 
 #resultItems {
-    /* background-color:  rgba(4, 4, 87, 0.5);; */
-    width: 60vw;
+    width: 59vw;
+    margin-left: 10px;
     margin-top: 20px;
     max-height: 30vh;
     overflow-y: scroll;
@@ -93,7 +98,7 @@ table {
 
 td {
     color: aliceblue;
-} 
+}
 
 td:hover {
     color: #000;
@@ -101,18 +106,21 @@ td:hover {
 }
 
 button {
-    width: 150px;
+    width: 10vw;
+    min-width: 122px;
     border-radius: 10px;
     background-color: azure;
 }
 
 #favlink {
+    min-width: 90px;
     margin-top: 15px;
     margin-bottom: 20px;
     margin-left: 40%;
+    margin-right: 40%;
 }
 
-button:hover{
+button:hover {
     color: aliceblue;
     background-color: #9DA7E0;
 }
