some responsiveness added for meal page

--- a/styles/meal.css
+++ b/styles/meal.css
@@ -8,6 +8,7 @@ body {
     background-color: rgba(4, 4, 87, 0.5);
     padding-left: 20px;
     padding-bottom: 20px;
+    height: 90%;
 }
 
 h1{
@@ -17,7 +18,7 @@ h1{
 
 #homeLink {
     position: absolute;
-    top: 96vh;
+    top: 96%;
     left: 45vw;
     color: rgb(98, 35, 35);
 }
@@ -33,12 +34,12 @@ img {
 }
 
 .key{
-    font-size: 3vmin;
-    color: rgb(0, 0, 0);
+    font-size: 1.5vmax;
+    color: rgb(74, 24, 24);
 }
 
 .value{
-    font-size: 2.5vmin;
+    font-size: 1.2vmax;
 }
 
 #strYoutube,#strSource{
@@ -46,10 +47,11 @@ img {
 }
 
 #instrn{
-    margin-top: 10vh;
+    margin-top: 15vmin;
     margin-right: 1vw;
     margin-bottom: 3vh;
-    max-height: 25vh;
+    max-height: 25vmin;
+    font-size: 2vmin;
     overflow-y: scroll;
 }
 
